# mini-tf

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: transformer.py
mini_tf/: auto_diff.py
pa1/: auto_diff.py  fused_ops.py  part3.txt  transformer.py
tests/: fused_ops.py  test_auto_diff_graph_backward.py  test_auto_diff_graph_forward.py  test_auto_diff_node_backward.py  test_auto_diff_node_forward.py  test_fused_ops.py  test_fused_ops_perf.py
